--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -1,34 +1,200 @@
+/* General div */
 .cart-container {
-  overflow: hidden;
+  max-width: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 10rem;
+  margin-top: 1%;
 }
-.summary-container {
-  width: 50%;
-  float: left;
-
-  margin-top: 70px;
-}
-.summary-container h2,
-p {
-  text-align: left;
-  margin-left: 200px;
-}
-
+/* Right/Blue part of the cart */
 .payment-container {
-  background-color: rgb(30, 95, 116);
-  border-radius: 25px 0px 0px 25px;
-  position: absolute;
-  left: 65%;
-  width: 35%;
-  float: right;
+  background: #1e5f74;
   color: white;
-  -webkit-border-radius: 25px 0px 0px 25px;
-  -moz-border-radius: 25px 0px 0px 25px;
-  -ms-border-radius: 25px 0px 0px 25px;
-  -o-border-radius: 25px 0px 0px 25px;
-  margin-top: 70px;
-  height: 80%;
+  border-radius: 25px 0px 0px 25px;
+}
+.payment-container h2 {
+  margin-left: -40%;
+}
+.payment-container p {
+  margin-left: -40%;
 }
 
+/* Card info */
+/* Icons */
+.at-icon {
+  position: absolute;
+  color: #8b8b8b;
+  margin-top: 15px;
+  margin-left: 5px;
+}
+.card-icon {
+  position: absolute;
+  color: #8b8b8b;
+  margin-top: 10px;
+  margin-left: 5px;
+
+  transform: rotate(135deg);
+}
+.name-icon {
+  position: absolute;
+  color: #8b8b8b;
+  margin-top: 15px;
+  margin-left: 5px;
+}
+.card-info {
+  margin-left: 15%;
+  text-align: left;
+}
+/* email/cardholder */
+.email-input,
+.cardholder-input {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  width: 380px;
+  height: 25px;
+
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 7px;
+
+  text-align: center;
+}
+/* Card Detail */
+.card-detail {
+  display: flex;
+}
+.card-number,
+.card-expdate,
+.card-cvc {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  height: 25px;
+
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 7px;
+
+  text-align: center;
+}
+.card-number {
+  width: 250px;
+}
+.card-expdate,
+.card-cvc {
+  width: 60px;
+}
+/* Billing adress */
+.billing-adress-info {
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-row: auto auto;
+}
+.billing-address {
+  margin: 0px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 7px;
+  color: black;
+  height: 30px;
+  width: 200px;
+  text-align: left;
+  font-size: 10px;
+  border-radius: 0px 7px 7px 0px;
+}
+.billing-state {
+  margin: 0px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 7px;
+  color: black;
+  height: 30px;
+  width: 200px;
+  text-align: left;
+  font-size: 10px;
+  border-radius: 0px 0px 0px 7px;
+}
+.billing-zipcode {
+  margin: 0px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+  border-radius: 7px;
+  color: black;
+  height: 30px;
+  width: 200px;
+  text-align: left;
+  font-size: 10px;
+  border-radius: 0px 7px 7px 0px;
+}
+/* Button */
+.button-80 {
+  background: #fff;
+  backface-visibility: hidden;
+  border-radius: 0.375rem;
+  border-style: solid;
+  border-width: 0.125rem;
+  box-sizing: border-box;
+  color: #212121;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular, Helvetica, sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: -0.01em;
+  line-height: 1.3;
+  padding: 0.875rem 1.125rem;
+  position: relative;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform 0.2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  height: 50px;
+  width: 150px;
+  text-align: center;
+  margin-top: 20px;
+  -webkit-border-radius: 0.375rem;
+  -moz-border-radius: 0.375rem;
+  -ms-border-radius: 0.375rem;
+  -o-border-radius: 0.375rem;
+
+  align-items: left;
+  margin-left: -40%;
+  margin-right: auto;
+}
+.button-80:not(:disabled):hover {
+  transform: scale(1.05);
+}
+.button-80:not(:disabled):hover:active {
+  transform: scale(1.05) translateY(0.125rem);
+  -webkit-transform: scale(1.05) translateY(0.125rem);
+  -moz-transform: scale(1.05) translateY(0.125rem);
+  -ms-transform: scale(1.05) translateY(0.125rem);
+  -o-transform: scale(1.05) translateY(0.125rem);
+}
+.button-80:focus {
+  outline: 0 solid transparent;
+}
+.button-80:focus:before {
+  content: "";
+  left: calc(-1 * 0.375rem);
+  pointer-events: none;
+  position: absolute;
+  top: calc(-1 * 0.375rem);
+  transition: border-radius;
+  user-select: none;
+}
+.button-80:focus:not(:focus-visible) {
+  outline: 0 solid transparent;
+}
+.button-80:focus:not(:focus-visible):before {
+  border-width: 0;
+}
+.button-80:not(:disabled):active {
+  transform: translateY(0.125rem);
+}
+
+/* Shipping area */
 .normal-shipping,
 .fast-shipping {
   border: 1px solid rgb(181, 181, 181);
@@ -64,7 +230,6 @@ p {
   margin-left: 15px;
   margin-top: 15px;
 }
-
 .normal-shipping input,
 .fast-shipping input {
   height: 40px;
@@ -85,229 +250,26 @@ p {
   margin-top: 25px;
 }
 
-.payment-container h2,
-.payment-container p {
-  text-align: left;
-  margin-left: 150px;
-}
-
-.card-info {
-  text-align: left;
-  margin-left: 200px;
-  font-size: 20px;
-
-  margin-left: 150px;
-  margin-top: 15px;
-}
-
-.email-input,
-.cardholder-input {
-  margin-top: 10px;
-  margin-bottom: 15px;
-  width: 380px;
-  height: 25px;
-
-  background: #ffffff;
-  border: 1px solid #c5c5c5;
-  border-radius: 7px;
-
-  text-align: center;
-}
-
-.card-detail {
-  width: 380px;
-}
-
-.card-number {
-  margin-top: 10px;
-  margin-bottom: 15px;
-  width: 275px;
-  height: 25px;
-
-  background: #ffffff;
-  border: 1px solid #c5c5c5;
-  border-radius: 7px 0px 0px 7px;
-
-  text-align: center;
-  font-size: 10px;
-}
-.card-expdate {
-  margin-top: 10px;
-  margin-bottom: 15px;
-  width: 45px;
-  height: 25px;
-  background: #ffffff;
-  border: 1px solid #c5c5c5;
-  border-radius: 0px;
-  font-size: 10px;
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  -ms-border-radius: 0px;
-  -o-border-radius: 0px;
-}
-.card-cvc {
-  margin-top: 10px;
-  margin-bottom: 15px;
-  width: 40px;
-  height: 25px;
-  background: #ffffff;
-  border: 1px solid #c5c5c5;
-  border-radius: 0px 7px 7px 0px;
-  font-size: 10px;
-  -webkit-border-radius: 0px 7px 7px 0px;
-  -moz-border-radius: 0px 7px 7px 0px;
-  -ms-border-radius: 0px 7px 7px 0px;
-  -o-border-radius: 0px 7px 7px 0px;
-}
-
-.billing-adress-info {
-  width: 400px;
-}
-
-.billing-address {
-  margin-top: 10px;
-  margin-bottom: 0px;
-  width: 258px;
-  height: 25px;
-  background: #ffffff;
-  border: 1px solid #c5c5c5;
-  border-radius: 0px 7px 7px 0px;
-  text-align: center;
-  -webkit-border-radius: 0px 7px 0px 0px;
-  -moz-border-radius: 0px 7px 7px 0px;
-  -ms-border-radius: 0px 7px 7px 0px;
-  -o-border-radius: 0px 7px 7px 0px;
-}
-
-.billing-state {
-  margin-top: 0px;
-  width: 200px;
-  height: 25px;
-  background: #ffffff;
-  border: 1px solid #c5c5c5;
-  border-radius: 0px 0px 0px 7px;
-  text-align: center;
-  -webkit-border-radius: 0px 0px 0px 7px;
-  -moz-border-radius: 0px 0px 0px 7px;
-  -ms-border-radius: 0px 0px 0px 7px;
-  -o-border-radius: 0px 0px 0px 7px;
-}
-.billing-zipcode {
-  margin-top: 0px;
-  width: 172px;
-  height: 25px;
-  background: #ffffff;
-  border: 1px solid #c5c5c5;
-  border-radius: 0px 0px 7px 0px;
-  text-align: center;
-  -webkit-border-radius: 0px 0px 7px 0px;
-  -moz-border-radius: 0px 0px 7px 0px;
-  -ms-border-radius: 0px 0px 7px 0px;
-  -o-border-radius: 0px 0px 7px 0px;
-}
-
-.at-icon {
-  position: absolute;
-  color: #8b8b8b;
-  margin-top: 15px;
-  margin-left: 5px;
-}
-.card-icon {
-  position: absolute;
-  color: #8b8b8b;
-  margin-top: 10px;
-  margin-left: 5px;
-
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -ms-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-}
-.name-icon {
-  position: absolute;
-  color: #8b8b8b;
-  margin-top: 15px;
-  margin-left: 5px;
-}
-
+/* Totals */
 .totals-text {
   float: left;
   text-align: left;
-  margin-left: 150px;
+  margin-left: 15%;
 }
 .totals-res {
   text-align: left;
-  margin-left: 450px;
+  margin-left: 40%;
 }
 
-.button-80 {
-  background: #fff;
-  backface-visibility: hidden;
-  border-radius: 0.375rem;
-  border-style: solid;
-  border-width: 0.125rem;
-  box-sizing: border-box;
-  color: #212121;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Circular, Helvetica, sans-serif;
-  font-size: 1.125rem;
-  font-weight: 700;
-  letter-spacing: -0.01em;
-  line-height: 1.3;
-  padding: 0.875rem 1.125rem;
-  position: relative;
-  text-decoration: none;
-  transform: translateZ(0) scale(1);
-  transition: transform 0.2s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  height: 50px;
-  width: 150px;
-  text-align: center;
-  margin-top: 20px;
-  -webkit-border-radius: 0.375rem;
-  -moz-border-radius: 0.375rem;
-  -ms-border-radius: 0.375rem;
-  -o-border-radius: 0.375rem;
+/* @media */
+@media (min-width: 600px) {
+  .cart-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-.button-80:not(:disabled):hover {
-  transform: scale(1.05);
-}
-
-.button-80:not(:disabled):hover:active {
-  transform: scale(1.05) translateY(0.125rem);
-  -webkit-transform: scale(1.05) translateY(0.125rem);
-  -moz-transform: scale(1.05) translateY(0.125rem);
-  -ms-transform: scale(1.05) translateY(0.125rem);
-  -o-transform: scale(1.05) translateY(0.125rem);
-}
-
-.button-80:focus {
-  outline: 0 solid transparent;
-}
-
-.button-80:focus:before {
-  content: "";
-  left: calc(-1 * 0.375rem);
-  pointer-events: none;
-  position: absolute;
-  top: calc(-1 * 0.375rem);
-  transition: border-radius;
-  user-select: none;
-}
-
-.button-80:focus:not(:focus-visible) {
-  outline: 0 solid transparent;
-}
-
-.button-80:focus:not(:focus-visible):before {
-  border-width: 0;
-}
-
-.button-80:not(:disabled):active {
-  transform: translateY(0.125rem);
+@media (max-width: 900px) {
+  .cart-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
