--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,9 +1,9 @@
 .hero-container {
-  overflow: hidden;
-  background-color: aqua;
-  width: 100%;
-  height: 80vh;
   position: relative;
+  background: url(/public/img/about.jpg) no-repeat center;
+  background-size: cover;
+  height: 1200px;
+  overflow: hidden;
 }
 
 .hero-container h2 {
@@ -27,7 +27,80 @@
   width: 100%;
   transform: translateY(-20%);
 }
-/* HERO SECTION */
+
+.hero-button {
+  width: 200px;
+  height: 50px;
+  font-weight: 800;
+  color: aliceblue;
+  letter-spacing: 3px;
+  background-color: transparent;
+  border: 2px solid rgb(255, 255, 255);
+
+  border-radius: 20rem;
+
+  position: absolute;
+  z-index: 10;
+  top: 55%;
+  left: 60%;
+}
+
+.hero-button:hover {
+  color: black;
+  background-color: white;
+  cursor: pointer;
+}
+
+.about-us-container {
+  margin-top: 10rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.about-us-back {
+  object-fit: cover;
+  height: 50%;
+  width: auto;
+}
+
+.about-us-info {
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  display: flex;
+}
+
+.about-us-info img {
+  width: 30%;
+  height: 50rem;
+  margin: 4rem;
+}
+
+.about-us-info {
+  text-align: justify;
+  color: white;
+  font-size: 2rem;
+  padding: 4rem;
+}
+
+.about-us-info p {
+  width: 70%;
+}
+
+.darkner {
+  filter: invert(0%) sepia(1%) saturate(50%) hue-rotate(335deg) brightness(55%)
+    contrast(200%);
+}
+
+@media (max-width: 756px) {
+  .about-us-info img {
+    display: none;
+  }
+  .about-us-info p {
+    width: 100%;
+  }
+}
+
 h1 {
   text-align: center;
   margin: 3rem 0;
@@ -54,63 +127,6 @@ h1 {
 
 .hero-section div {
   width: 400px;
-}
-
-.hero-button {
-  width: 200px;
-  height: 50px;
-  font-weight: 800;
-  color: aliceblue;
-  letter-spacing: 3px;
-  background-color: transparent;
-  border: 2px solid rgb(255, 255, 255);
-  border-radius: 20rem;
-  position: absolute;
-  z-index: 10;
-  top: 55%;
-  left: 60%;
-}
-
-.hero-button:hover {
-  color: black;
-  background-color: white;
-}
-
-.about-us-container {
-  margin-top: 10rem;
-  overflow: hidden;
-  position: relative;
-}
-
-.about-us-back {
-  object-fit: cover;
-  height: 50%;
-  width: auto;
-}
-
-.about-us-info {
-  position: absolute;
-  z-index: 100;
-  top: 0;
-  display: flex;
-}
-
-.about-us-info img {
-  width: 30%;
-  height: auto;
-  margin: 4rem;
-}
-
-.about-us-info {
-  text-align: justify;
-  color: white;
-  font-size: 2rem;
-  padding: 4rem;
-}
-
-.darkner {
-  filter: invert(0%) sepia(1%) saturate(50%) hue-rotate(335deg) brightness(55%)
-    contrast(200%);
 }
 
 .footer-container {
